Ruby on Rails Demo

--- a/app/views/exercise1/newTime.html.erb
+++ b/app/views/exercise1/newTime.html.erb
@@ -1,2 +1,4 @@
-<h1>Exercise1#newTime</h1>
-<p>Find me in app/views/exercise1/newTime.html.erb</p>
+<h1>Time in one hour</h1>
+<p>
+  Time is <%= @time %>
+</p>
